# EcarRecog

./: .gitignore  README.md  build.gradle  settings.gradle
app/: build.gradle  proguard-android.txt
app/src/main/: AndroidManifest.xml
app/src/main/java/recognition/Helper/: PicSaveHelper.java
app/src/main/java/recognition/ecar/com/ecarrecog/: CrashHandler.java  (+4 more)
app/src/main/java/recognition/ecarrecog/: MemoryCameraActivity.java  TestActivity.java  mApplication.java
app/src/main/res/layout/: activity_carmera.xml  activity_main.xml
app/src/main/res/values/: attrs.xml  color.xml  dimens.xml  strings.xml  style.xml
ecarayrecognition/: build.gradle  proguard-android.txt
ecarayrecognition/assets/: en.model  en_num.model  zh.model
ecarayrecognition/src/main/: AndroidManifest.xml
ecarayrecognition/src/main/java/com/: LPR.java  RecogResult.java
ecarayrecognition/src/main/java/com/Helper/: ComRecogHelper.java  RecogHelper.java
ecarayrecognition/src/main/java/com/chmtech/lpr/: LPR.java
ecarayrecognition/src/main/java/com/safe/: RecogHelperSafe.java
ecarayrecognition/src/main/java/com/util/: CityCodeUtil.java  Consts.java  DataFormatUtil.java  EncryptionUtil.java  FileUtil.java  MemoryUtil.java  RecogFileUtil.java  RecogUtil.java  SpUtil.java  TagUtil.java  ViewfinderView.java
ecarayrecognition/src/main/java/com/util/ThreedPool/: MyThreadPool.java  PriorityThreadFactory.java
ecarayrecognition/src/main/java/com/utils/: CityCodeUtil.java  Consts.java  MemoryUtil.java  RecogFileUtil.java  RecogUtil.java
ecarayrecognition/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: CMakeLists.txt  build.gradle  proguard-rules.pro
mylibrary/src/main/: AndroidManifest.xml
mylibrary/src/main/java/com/: LPR.java
mylibrary/src/main/java/com/Helper/: ComRecogHelper.java  RecogResult.java  YYRecogResult.java
mylibrary/src/main/java/com/hd/lpr/lpr/: RecResult.java  liblpr.java
mylibrary/src/main/java/com/hd/ncnn/ncnn/: libncnn.java
mylibrary/src/main/java/com/safe/: RecogHelperSafe.java
mylibrary/src/main/java/com/util/: EncryptionUtil.java  ImageUtils.java
mylibrary/src/main/java/com/util/ThreedPool/: MyThreadPool.java
mylibrary/src/main/java/com/utils/: Consts.java  RecogFileUtil.java  ViewfinderView.java
(+7 files in other folders)
